--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,74 @@
-<h1>
-  {{title}}
-</h1>
+  <div>
+    {{title}}
+  <button
+    (click)="addNode(tree)">
+    Add Node
+  </button>
+  <button
+    (click)="addMainNode(tree)">
+    Add Node2
+  </button>
+ </div>
+
+ <div [ngClass]="blok">
+    <form>
+    <input #filter (keyup)="filterNodes(filter.value, tree)" placeholder="filter nodes"/>
+  </form>
+
+  
+  <Tree
+    #tree
+    [nodes]="nodes"
+    [focused]="true"
+    [options]="customTemplateStringOptions"
+    (onEvent)="onEvent($event)"
+  >
+  
+  <template #treeNodeTemplate let-node>
+  <span title="{{node.data.subTitle}}">{{ node.data.name }}</span>
+  <span class="pull-right">{{ childrenCount(node) }}</span>
+  <!--<button (click)="go($event)">Custom Action</button>-->
+    <button (click)="ukaz(node.data)">edit</button>
+  </template>
+  
+  <template #loadingTemplate>Loading, please hold....</template>
+  </Tree>
+  </div>
+ 
+  <div>
+  <p>
+    INFO: <br>
+    name: {{NAME}}
+    <br>
+    id: {{ID}}
+
+    <input type="text" ng-model="editName">
+     <button (click)="updateName(editName)">edit</button>
+  </p>
+  
+  
+  <button (click)="tree.treeModel.focusNextNode()">next node</button>
+  <button (click)="tree.treeModel.focusPreviousNode()">previous node</button>
+  <button (click)="tree.treeModel.focusDrillDown()">drill down</button>
+  <button (click)="tree.treeModel.focusDrillUp()">drill up</button>
+  <button
+    [disabled]="!tree.treeModel.getFocusedNode()"
+    (click)="tree.treeModel.getFocusedNode().toggleActivated()">
+    {{ tree.treeModel.getFocusedNode()?.isActive ? 'deactivate' : 'activate' }}
+  </button>
+  <button
+    [disabled]="!tree.treeModel.getFocusedNode()"
+    (click)="tree.treeModel.getFocusedNode().toggleExpanded()">
+    {{ tree.treeModel.getFocusedNode()?.isExpanded ? 'collapse' : 'expand' }}
+  </button>
+  <button
+    [disabled]="!tree.treeModel.getFocusedNode()"
+    (click)="tree.treeModel.getFocusedNode().blur()">
+    blur
+  </button>
+
+  <button
+    (click)="activateSubSub(tree)">
+    Activate inner node
+  </button>
+</div>
